--- a/src/components/HorizontalSlider/horizontalSlider.scss
+++ b/src/components/HorizontalSlider/horizontalSlider.scss
@@ -21,7 +21,7 @@
   @include height(80);
 }
 .category-name {
-    font-family: $nunito-semi-bold;
+    font-family: $roboto-medium;
     @include fontSize(28);
   @include padding(0,30);
 
