--- a/src/components/TalkToWeddingPlanner/talkToWeddingPlanner.scss
+++ b/src/components/TalkToWeddingPlanner/talkToWeddingPlanner.scss
@@ -29,14 +29,14 @@
 
 .heading {
   @include fontSize(22);
-  font-family: $nunito-bold;
+  font-family: $roboto-bold;
   color: $black-nine;
 }
 
 .button {
   @include borderRadius(10);
   @include padding(12,24);
-  font-family: $nunito-bold;
+  font-family: $roboto-bold;
   background-color: $bright-red;
   border: none;
   @include fontSize(16);
@@ -46,7 +46,7 @@
 
 .cancel-btn {
   color: $warm-grey-six;
-  font-family: $nunito-bold;
+  font-family: $roboto-bold;
   background: none;
   border: none;
 
