--- a/src/modules/categoryListing/categoryListing.scss
+++ b/src/modules/categoryListing/categoryListing.scss
@@ -20,7 +20,7 @@
         @include fontSize(18);
         color: $black-five;
         letter-spacing: 0.36px;
-        font-family: $nunito-regular;
+        font-family: $roboto-regular;
 
         &:focus {
             outline: 0;
