--- a/src/modules/home/home.scss
+++ b/src/modules/home/home.scss
@@ -29,7 +29,7 @@
 //Jumbotron 
 
 h1 {
-  font-family: $nunito-regular;
+  font-family: $roboto-regular;
   @include fontSize(58);
   @include letterSpacing(1.2);
   line-height: 1;
@@ -44,7 +44,7 @@ hr {
 .button {
   @include borderRadius(3);
   @include padding(12,24);
-  font-family: $nunito-bold;
+  font-family: $roboto-bold;
   border-radius: .15rem;
   background-color: $bright-red;
   border: none;
@@ -71,8 +71,10 @@ a.button {
 
 .pSmall {
   @include fontSize(18);
-  line-height: 1.6;
+  line-height: 1.67;
   @include letterSpacing(.6);
+  max-height: 7.515rem;
+  overflow: hidden;
 }
 
 .center {
@@ -96,18 +98,20 @@ a.button {
 
 .packageContainer {
   display: flex;
-  justify-content: space-around;
-  padding: 3.5rem 0;
+  justify-content: space-between;
+  // padding: 3.5rem 0;
+  @include padding(59.5,0);
   border-bottom: 2px solid #eee;
 
   .details {
-    width: max-content;
+    // width: max-content;
+    @include width(787);
     padding-top: 2.5rem; 
   }
 
   .featureImage {
-    @include width(350);
-    @include height(350);
+    @include width(406);
+    @include height(406);
     border-radius: 50%;
     background-size: cover;
     position: relative;
@@ -115,12 +119,13 @@ a.button {
     justify-content: center;
     align-items: flex-end;
     cursor: pointer;
+    flex-shrink: 0;
 
     button {
       background-color: $bright-red;
       @include fontSize(14);
       @include letterSpacing(0.4);
-      font-family: $nunito-regular;
+      font-family: $roboto-regular;
     }
   }
 
@@ -141,12 +146,12 @@ a.button {
 
 .priceNow {
   color: $bright-red;
-  font-family: $opensans-semi-bold;
+  font-family: $roboto-medium;
 }
 
 .priceBefore {
   color: $black-two;
-  font-family: $opensans-regular;
+  font-family: $roboto-regular;
 }
 
 // multicarousel styles - horizontal
@@ -177,7 +182,7 @@ a.button {
   }
 
   h3 {
-    font-family: $nunito-regular;
+    font-family: $roboto-regular;
     @include fontSize(30);
     @include letterSpacing(1.2);
     line-height: 1.3;
@@ -219,13 +224,12 @@ a.button {
   }
 
   h4 {
+    font-family: $frank-medium;
     position: absolute;
     bottom: 18%;
     width: 100%;
     text-align: center;
-    color: #ffffff;
-
-    font-family: $nunito-bold;
+    color: $white;
     @include fontSize(20);
     @include letterSpacing(0.6);
   }
@@ -237,10 +241,6 @@ a.button {
     width: 100%;
     text-align: center;
   }
-}
-
-.verticalMultiContainer {
-  
 }
 
 .verticalMultiItem {
@@ -274,7 +274,7 @@ a.button {
     }
 
     .pmore {
-      font-family: $nunito-bold;
+      font-family: $roboto-medium;
       position: absolute;
       bottom: 0;
       right: 2.5rem;  
@@ -292,8 +292,8 @@ a.button {
     }
 
     h3 {
+      font-family: $frank-medium;
       @include fontSize(30);
-      font-family: $nunito-semi-bold;
       color: $white;
     }
 
@@ -335,6 +335,7 @@ a.button {
   }
 }
 .carousel-header {
+  font-family: $frank-regular;
   @include fontSize(58);
   line-height: 1.24;
   color: white;
@@ -342,13 +343,14 @@ a.button {
 }
 
 .carousel-text {
+  font-family: $roboto-regular;
   line-height: 1.21;
   @include fontSize(28);
   margin-bottom: 1.5rem;
 }
 
 .carousel-btn {
-  font-family: $nunito-bold;
+  font-family: $roboto-medium;
   @include fontSize(20);
   @include letterSpacing(.7);
   background: $bright-red;
@@ -380,7 +382,8 @@ a.button {
 .bottom-curve {
   position: absolute;
   left: 0;
-  bottom: -5px;
+  bottom: -.5rem;
   max-width: 100%;
   height: auto;
+  width: 100%;
 }
