--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -26,7 +26,7 @@ html {
 }
 
 body {
-  font-family: $nunito-regular;
+  font-family: $roboto-regular;
   font-size: 16px;
   padding: 0;
   margin: 0;
@@ -39,7 +39,7 @@ body {
 }
 
 h1,h2,h3,h4,h5,h6 {
-  font-family: $nunito-regular;
+  font-family: $roboto-regular;
 }
 .app {
   margin-top: 10.33125rem;
