--- a/src/modals/signInModal/signInModal.scss
+++ b/src/modals/signInModal/signInModal.scss
@@ -10,13 +10,13 @@
 
 .heading {
   @include fontSize(22);
-  font-family: $nunito-bold;
+  font-family: $roboto-bold;
   color: $black-nine;
 }
 
 .input {
   font-size: 1.1rem;
-  font-family: $nunito-regular;
+  font-family: $roboto-regular;
   color: $black-five;
   margin: .5rem;
   letter-spacing: .035px;
@@ -24,14 +24,14 @@
 
 .detail-bold {
   font-size: 1.1rem;
-  font-family: $nunito-semi-bold;
+  font-family: $roboto-medium;
   color: $black-five;
   letter-spacing: .035px;
 }
 
 .detail-link {
   font-size: 1.1rem;
-  font-family: $nunito-regular;
+  font-family: $roboto-regular;
   color: $bright-red;
   letter-spacing: .035px;
   cursor: pointer;
@@ -45,7 +45,7 @@
   @include fontSize(16);
   border-radius: .15rem;
   background-color: $bright-red;
-  font-family: $nunito-bold;
+  font-family: $roboto-bold;
   letter-spacing: .4px;
   color: white;
 }
@@ -65,7 +65,7 @@
   display: flex;
   justify-content: space-between;
   margin-top: 1.4rem;
-  font-family: $nunito-regular;
+  font-family: $roboto-regular;
   @include fontSize(16);
   color: #535353;
   letter-spacing: .48px;
@@ -81,14 +81,14 @@
 
 .pWith {
   @include fontSize(18);
-  font-family: $nunito-regular;
+  font-family: $roboto-regular;
   color: #070707;
   @include letterSpacing(0.54);
 }
 
 .login {
   @include fontSize(16);
-  font-family: $nunito-bold;
+  font-family: $roboto-bold;
   color: $bright-red;
   background-color: transparent;
   cursor: pointer;
@@ -106,7 +106,7 @@
   @include fontSize(16);
   border-radius: .15rem;
   background-color: $bright-red;
-  font-family: $nunito-bold;
+  font-family: $roboto-bold;
   letter-spacing: .4px;
   text-transform: uppercase;
   color: white;
@@ -120,7 +120,7 @@
 }
 
 .footerText {
-  font-family: $nunito-regular;
+  font-family: $roboto-regular;
   @include fontSize(16);
   letter-spacing: .48px;
   color: $black-ten;
@@ -130,7 +130,7 @@
   }
 
   .bold {
-    font-family: $nunito-bold;
+    font-family: $roboto-bold;
   }
 }
 
