--- a/src/modules/ceremonyDetail/CeremonyDetail.scss
+++ b/src/modules/ceremonyDetail/CeremonyDetail.scss
@@ -4,16 +4,16 @@
 
 .ceremony-detail {
   margin-top: 10.33125rem;
+
   div[class^="container"] {
     max-width: 80%;
-   }
+  }
 }
 
 .ceremony-cover {
   @include height(718.5);
   @include margin(97,0,0);
   position: relative;
-
 
   h1 {
     @include fontSize(58);
@@ -25,7 +25,7 @@
   }
 
   p {
-    font-family: $nunito-semi-bold;
+    font-family: $roboto-medium;
     @include fontSize(28);
     color: $white;
     max-width: 50%;
@@ -47,23 +47,25 @@
 .bottom-curve {
   position: absolute;
   left: 0;
-  bottom: -5px;
+  bottom: -.5rem;
   max-width: 100%;
   height: auto;
-
+  width: 100%;
 }
 
 h3 {
-  font-family: $nunito-regular;
+  font-family: $roboto-regular;
   color: $black;
   @include fontSize(30);
   @include margin(0,0,20);
 }
+
 .sub-title {
   @include fontSize(20);
 }
+
 .view-all {
   color: $bright-red;
   @include fontSize(18);
-  font-family: $nunito-bold;
+  font-family: $roboto-bold;
 }
