--- a/src/modules/verifyEmail/verifyEmail.scss
+++ b/src/modules/verifyEmail/verifyEmail.scss
@@ -14,13 +14,13 @@
 
 .heading{
     font-size: 1.6rem;
-    font-family: $nunito-semi-bold;
+    font-family: $roboto-medium;
     color: $black-five;
 }
 
 .detail{
     font-size: 1.1rem;
-    font-family: $nunito-regular;
+    font-family: $roboto-regular;
     color: $black-five;
     margin: 0.5rem;
     letter-spacing: 0.035;
@@ -28,14 +28,14 @@
 
 .detail-bold{
     font-size: 1.1rem;
-    font-family: $nunito-semi-bold;
+    font-family: $roboto-medium;
     color: $black-five;
     letter-spacing: 0.035;
 }
 
 .detail-link{
     font-size: 1.1rem;
-    font-family: $nunito-semi-bold;
+    font-family: $roboto-medium;
     color: $corn-flower;
     letter-spacing: 0.035;
     margin-bottom: rem;
@@ -45,7 +45,7 @@
     border-radius: 0.15rem;
     background-color: $bright-red;
     font-size: 0.8rem;
-    font-family: $nunito-bold;
+    font-family: $roboto-bold;
     letter-spacing: 0.4px;
     padding: 0.8rem 1.6rem;
     text-transform: uppercase;
