--- a/src/variables/_colors.scss
+++ b/src/variables/_colors.scss
@@ -35,3 +35,6 @@ $red-two: #f00303;
 $black-fifteen: #212020;
 $brownish-grey-three: #5c5c5c;
 $grape: #5b2148;
+$primary-color: #ee4d9b;
+$secondary-color: #6d2158;
+$tertiary-color: #da2128;
