--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -3,8 +3,9 @@
 @import '../../variables/utils';
 
 .logo-test {
-  width: 3rem;
-  max-width: 60px;
+  @include width(143);
+  height: auto;
+  max-width: 143px;
 }
 
 .ah-header {
