--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -67,4 +67,7 @@ h2 {
   @include padding(20,22);
   @include borderRadius(8);
   color: $white;
+  outline: none;
+  border: none;
+  cursor: pointer;
 }
