--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -44,7 +44,7 @@
   box-shadow: 0 2px 6px 0 $black-16;
   background: #fff;
   @include tablet {
-    @include padding(0, 38)
+     @include padding(0, 38)
   }
 }
 
@@ -223,11 +223,31 @@
 
 .userDropdown {
   position: absolute !important;
-  left: -20px;
+  left: auto;
+  right: -1.25rem;
+  top: 4.7rem;
+  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.3);
+  border: none;
+  @include borderRadius(8);
+  &:before {
+    content: '';
+    height: .7rem;
+    width: .7rem;
+    background: $white;
+    position: absolute;
+    top: -0.25rem;
+    right: 25%;
+    transform: rotate(45deg);
+  }
 
   button {
     cursor: pointer;
-    &:active, &:focus, &:hover {
+    padding: .7rem;
+    font-family: $roboto-light;
+
+    &:active,
+    &:focus,
+    &:hover {
       background-color: #ee4d9b29;
       outline: 0;
     }
