--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -279,3 +279,11 @@
 .jumbotron {
   padding: 0 2rem 4rem;
 }
+.pagination {
+  li.active {
+    background-color: $secondary-color !important;
+    a {
+      color: $white;
+    }
+  }
+}
