--- a/src/modules/bookingConfirmation/bookingConfirmation.scss
+++ b/src/modules/bookingConfirmation/bookingConfirmation.scss
@@ -43,7 +43,7 @@
 
 .button {
     border-radius: 0.15rem;
-    background-color: $bright-red;
+    background-color: $primary-color;
     font-size: 0.8rem;
     font-family: $roboto-bold;
     letter-spacing: 0.4px;
