--- a/src/modules/planningTool/planningTool.scss
+++ b/src/modules/planningTool/planningTool.scss
@@ -29,7 +29,7 @@
 
 .formButton {
   border-radius: .15rem;
-  background-color: $bright-red;
+  background-color: $primary-color;
   @include fontSize(28);
   font-family: NunitoSans-Bold;
   letter-spacing: .4px;
