--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -279,6 +279,8 @@
 .jumbotron {
   padding: 0 2rem 4rem;
 }
+// pagination fixes
+
 .pagination {
   li.active {
     background-color: $secondary-color !important;
@@ -287,3 +289,15 @@
     }
   }
 }
+
+// talk to poppup fix
+
+.call-btn {
+  img {
+    @include width(80);
+    @include height(80);
+    cursor: pointer;
+  }
+}
+
+
