--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -37,7 +37,7 @@ p {
   margin-bottom: 2rem;
 
   p:first-child {
-    font-family: $roboto-bold;
+    font-family: $frank-bold;
     @include fontSize(18);
     margin-bottom: 1rem;
 
