--- a/src/components/TalkToWeddingPlanner/talkToWeddingPlanner.scss
+++ b/src/components/TalkToWeddingPlanner/talkToWeddingPlanner.scss
@@ -39,10 +39,10 @@
   font-family: $roboto-medium;
   background: none;
   border: none;
+  @include margin(0,8);
 
   &:hover {
     background: none;
     color: inherit;
   }
 }
-
