--- a/src/modules/detailPage/detailPageComponent.scss
+++ b/src/modules/detailPage/detailPageComponent.scss
@@ -382,7 +382,7 @@
 }
 
 .remove-btn {
-  color: $primary-color;
+  color: $secondary-color;
   border: none;
   background: transparent;
   @include fontSize(13);
