--- a/src/modules/ceremonyDetail/CeremonyDetail.scss
+++ b/src/modules/ceremonyDetail/CeremonyDetail.scss
@@ -3,16 +3,13 @@
 @import '../../variables/fonts';
 
 .ceremony-detail {
-  margin-top: 10.33125rem;
-
   div[class^="container"] {
     max-width: 80%;
   }
 }
 
 .ceremony-cover {
-  @include height(718.5);
-  @include margin(97,0,0);
+  @include height(400);
   position: relative;
 
   h1 {
@@ -20,15 +17,14 @@
     letter-spacing: normal;
     line-height: 1.34;
     color: $white;
-    max-width: 50%;
-    margin-bottom: 2rem;
+    margin-bottom: .5rem;
   }
 
   p {
-    font-family: $roboto-medium;
-    @include fontSize(28);
+    font-family: $roboto-regular;
+    @include fontSize(18);
     color: $white;
-    max-width: 50%;
+    line-height: 1.56;
 
   }
 
@@ -41,16 +37,11 @@
   width: 100%;
   height: 100%;
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75));
-  @include padding(182,126);
-}
-
-.bottom-curve {
-  position: absolute;
-  left: 0;
-  bottom: -.5rem;
-  max-width: 100%;
-  height: auto;
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  @include padding(0,0,24);
 }
 
 h3 {
