--- a/src/modals/forgotPasswordModal/forgotPasswordModal.scss
+++ b/src/modals/forgotPasswordModal/forgotPasswordModal.scss
@@ -3,8 +3,16 @@
 @import '../../variables/utils';
 @import '../../variables/breakpoints';
 
+.forgotContainer {
+  @include width(680);
+}
+
 .forgot-password {
-    @include width(491);
-    @include height(316);
     background-color: white;
-  }
+    @include padding(40, 80);
+
+    .header {
+      font-family: $roboto-medium;
+      text-align: center;
+    }
+}
