reset password ui
fix

--- a/src/modals/forgotPasswordModal/forgotPasswordModal.scss
+++ b/src/modals/forgotPasswordModal/forgotPasswordModal.scss
@@ -4,15 +4,33 @@
 @import '../../variables/breakpoints';
 
 .forgotContainer {
-  @include width(680);
+  @include width(490);
 }
 
 .forgot-password {
     background-color: white;
-    @include padding(40, 80);
+    @include padding(40, 50);
+    text-align: center;
 
     .header {
       font-family: $roboto-medium;
-      text-align: center;
+      @include letterSpacing(0.66);
+      @include fontSize(22);
+      margin-bottom: 2.5rem;
+    }
+
+    .message {
+      font-family: $roboto-regular;
+      @include fontSize(18);
+      @include letterSpacing(0.54);
+    }
+
+    .error {
+      @include fontSize(15);
+      color: $bright-red;
+      margin-top: 0.5rem; 
+      position: absolute;
+      left: 0;
+      right: 0;
     }
 }
