--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -125,6 +125,7 @@
     margin-top: .4em;
     color: #d50000;
     font-size: .8em;
+    letter-spacing: 0.39px;
     visibility: hidden;
   }
 
@@ -134,7 +135,7 @@
         color: rgba(7,7,7,.5);
         text-transform: uppercase;
         letter-spacing: .4px;
-        transform: translateY(-70%) scale(0.9);
+        transform: translateY(-70%) scale(0.8);
       }
     }
 
