--- a/src/variables/_colors.scss
+++ b/src/variables/_colors.scss
@@ -38,3 +38,4 @@ $grape: #5b2148;
 $primary-color: #ee4d9b;
 $secondary-color: #6d2158;
 $tertiary-color: #da2128;
+$primary-color-25: rgba(238, 77, 155, 0.25);
