--- a/src/components/Jumbotron/jumbotron.scss
+++ b/src/components/Jumbotron/jumbotron.scss
@@ -40,7 +40,7 @@ hr {
   @include width(1400);
   margin: 0 auto;
   max-width: 100%;
-  padding: 0 3rem;
+  padding: 3rem 3rem 0;
 }
 
 .carousel-wrap {
