header category list

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -173,14 +173,20 @@
   height: 0;
   overflow: hidden;
   opacity: 0;
+  display: flex;
 
-  li {
-    @extend %pointer;
-    padding: 1rem 1.5rem;
+  ul {
+    padding: 0 !important;
+    li {
+      @extend %pointer;
+      padding: 1rem 1.5rem;
+      list-style: none;
+      white-space: nowrap;
 
-    a {
-      &:before {
-        display: none;
+      a {
+        &:before {
+          display: none;
+        }
       }
     }
   }
@@ -229,6 +235,7 @@
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.3);
   border: none;
   @include borderRadius(8);
+
   &:before {
     content: '';
     height: .7rem;
@@ -253,6 +260,7 @@
     }
   }
 }
+
 .talk-btn {
   position: fixed;
   top: 50vh;
